<resources>
    <string name="app_name">Attendance Report</string>
    <!-- Strings related to Drawer menu-->
    <string-array name="drawer_menu_array">
        <item>Attendance Report</item>
        <item>Settings</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Strings related to Attendance Report -->
    <string name="title_activity_attendance">Attendance Report</string>
    <string name="btn_attending">Attending Report</string>
    <string name="btn_leaving">Leaving Report</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_cat_user_setting">User Setting</string>
    <string name="pref_filter_by_status">Status Filter</string>
    <string name="pref_filter_by_status_summary">Show Button by Attendance Status</string>
    <string name="pref_cat_email_server_setting">Server Setting</string>
    <string name="pref_email_sender_address">Sender email</string>
    <string name="pref_email_receiver_address">Receiver email</string>
    <string name="pref_email_smtp_host">SMTP server</string>
    <string name="pref_email_smtp_port">SMTP port</string>
    <string name="pref_email_smtp_auth">Authenticate using AUTH</string>
    <string name="pref_cat_email_setting">Email Setting</string>
    <string name="pref_email_smtp_username">Login Name</string>
    <string name="pref_email_smtp_password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
